Minor corrections for clarity, fixed whitespace issues

--- a/compass/src/sass/compass.scss
+++ b/compass/src/sass/compass.scss
@@ -5,7 +5,8 @@
  */
 @font-face {
   font-family: TitilliumBold;
-  src: url(../fonts/TitilliumWeb-Bold.ttf); }
+  src: url(../fonts/TitilliumWeb-Bold.ttf); 
+}
 
 
 body {
@@ -24,19 +25,19 @@ body {
 }
 
 .cardinal {
-   margin: 0;
-   padding: 0;
-   position: absolute; 
+  margin: 0;
+  padding: 0;
+  position: absolute; 
 }
 
 .cardinal-direction {
-   position: relative; 
-   height: 50px;
+  position: relative; 
+  height: 50px;
 }
 
 .bar {
-   width: 100%;
-   height: 25px;
-   background: transparent url(../images/bar.png) no-repeat center center; 
- }
+  width: 100%;
+  height: 25px;
+  background: transparent url(../images/bar.png) no-repeat center center; 
+}
 
